--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "mongoose": "^6.4.0"
   }
 }
