--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
+    "lodash": "^4.17.21",
+    "method-override": "^3.0.0",
     "mongoose": "^6.4.0"
   }
 }
