--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   "homepage": "https://github.com/Saqib-Aziz33/billing-and-inventory-managment-system#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "helmet": "^5.1.0",
     "joi": "^17.6.0",
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
